[package]
name = "physics_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
clap = { version = "4.5.23", features = ["derive"] }
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }
strum = { version = "0.26.3", features = ["derive"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
