[package]
name = "physics_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
clap = { version = "4.5.41", features = ["derive"] }
log = { version = "0.4.27", features = ["max_level_debug", "release_max_level_warn"] }
strum = { version = "0.27.2", features = ["derive"] }
nalgebra = "0.33.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
